# django-erd

./: .gitignore  .pre-commit-config.yaml  =4.10.0  CHANGELOG.md  CONTRIBUTING.md  DONE.md  DONE_ARCHIVE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  test-docs.yml  test.yml
django_erd/: apps.py
django_erd/definitions/: base.py  fields.py  models.py  relationships.py
django_erd/management/commands/: generate_data_dictionary.py
django_erd_generator/: apps.py
django_erd_generator/contrib/: dialects.py  gis_fields.py  markdown.py
django_erd_generator/definitions/: __init__.py  base.py  fields.py  models.py  relationships.py
django_erd_generator/management/commands/: generate_data_dictionary.py  generate_erd.py
django_erd_generator/utils/: data_dictionary.py  git.py
docs/: api.md  changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/features/: data-dictionary.md  erd-generation.md  gis-fields.md  supported-dialects.md
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/features/data-dictionary/: index.html
site/features/erd-generation/: index.html
site/features/gis-fields/: index.html
site/features/supported-dialects/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: conftest.py  gis_models.py  models.py  settings.py  test_comprehensive.py  test_data_dictionary.py  test_field_definitions.py  test_gis_fields.py  test_model_definitions.py  test_relationship_definitions.py  utils.py
tests/test_data/: dbdiagram.txt  plantuml.txt
