[tool.poetry]
name = "django_erd_generator"
version = "0.1.1"
description = "Django ERD Generator is a CLI tool for generating Entity-Relationship Diagrams (ERDs) from Django models. It supports multiple output formats, allowing easy database visualization in tools like Mermaid.js, PlantUML, and dbdiagram.io. The generator extracts model definitions, fields, and relationships, converting them into structured representations for diagramming."
authors = ["Andryo Marzuki <andryo@mrzk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.24.1"
pytest = "^8.3.4"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
