[project]
name = "django-erd-generator"
version = "0.1.7"
description = "CLI tool to generate ER diagrams from Django models for Mermaid.js, PlantUML, and dbdiagram.io"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Andryo Marzuki", email = "andryo@mrzk.io" }]
keywords = ["django", "ERD", "ER diagram", "entity relationship", "mermaid", "PlantUML", "dbdiagram", "visualization", "data dictionary", "schema documentation", "model documentation", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Database",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Documentation :: Sphinx"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/marzukia/django-erd"
Documentation = "https://github.com/marzukia/django-erd#readme"
Source = "https://github.com/marzukia/django-erd"
"Issue Tracker" = "https://github.com/marzukia/django-erd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# development dependencies - install with: uv sync --dev
dev = [
    "django>=4.2.25",          # django framework for testing
    "tox>=4.24.1",             # cross-version testing
    "pytest>=8.3.4",           # test runner
    "pytest-django>=4.10.0",   # django test integration
    "ipython>=8.12.3",         # interactive shell
    "ruff>=0.9.0",             # linting and formatting
    "uv>=0.6.0",               # python package manager
    "pre-commit>=4.1.0",       # git hooks
    "mkdocs>=1.6.0",           # documentation generator
    "mkdocs-material>=9.5.0",  # mkdocs theme
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
